<resources>
    <string name="app_name">Secret Generator</string>
    <string name="login">Login</string>
    <string name="not_registered">Not registered</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="input_hint">Approve key</string>
    <string name="approve">Approve</string>

    <string name="app_package_name">com.example.secretgenerator</string>
    <string name="error_generate_key">You should generate key!</string>
    <string name="error_approve_key">You should approve key!</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="already_registered">Already registered</string>
    <string name="title_login">Login</string>
    <string name="hello_user">Hello, User!</string>
    <string name="wish_user">Wish you a good day</string>
    <string name="logout">Logout</string>
    <string name="avatar">Avatar</string>
    <string name="delete_account">Delete account</string>
</resources>