<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_violet_gradient"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/hello_user"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wishTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wish_user"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@id/helloTextView"
        app:layout_constraintTop_toBottomOf="@id/helloTextView" />

    <ImageButton
        android:id="@+id/logoutButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="18dp"
        android:background="@null"
        android:contentDescription="@string/logout"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_logout_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/helloTextView"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/grey_300"
        android:contentDescription="@string/avatar"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_person_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wishTextView"
        app:tint="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_light_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatarImageView">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/curUsernameTextLayout"
            style="@style/Theme.SecretGenerator.DefaultTextInput"
            android:layout_marginTop="48dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/curUsernameTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/username_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/curPasswordTextLayout"
            style="@style/Theme.SecretGenerator.DefaultTextInput"
            android:layout_marginTop="24dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/curUsernameTextLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/curPasswordTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:hint="@string/password_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/deleteButton"
            style="@style/Theme.SecretGenerator.DefaultButton"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/black"
            android:text="@string/delete_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>